kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cost-management-system-app
  name: cost-management-system-app-deployment
  namespace: cost-management-system-release
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cost-management-system-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cost-management-system-app
    spec:
      containers:
      - name: cost-management-system-app
        image: asia-southeast2-docker.pkg.dev/moladin-infra-prod/infra-prod/cost-management-system:v0.0.2-test
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 512M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
