kubernetes/production/ingress-data.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-cost-management-system-data
  namespace: cost-management-system-release
spec:
  rules:
    - host: finops-data.moladin.com
      http:
        paths:
          - backend:
              service:
                name: cost-management-system-svc
                port:
                  number: 5005
            path: /api/gcp/bigquery
            pathType: Prefix
  tls:
    - hosts:
        - finops-data.moladin.com
      secretName: wildcard-moladin-tls
